Filtro-busca-de-estados do brasil.html

--- a/DeverDaCasa-buscadeestados do brasil.html
+++ b/DeverDaCasa-buscadeestados do brasil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dever de Aula - Filtro usando onchange e onkeydown</title>
+    <title>Filtro usando onchange e onkeydown</title>
     <style>
         #resultado {
             margin-top: 10px;
